# fruit-issue-130

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: FruitComponents.hpp  IClass.hpp  IClassImpl.hpp  OuterClass.hpp  TypeEnum.hpp  TypeEnumAnnotation.hpp
src/: FruitComponents.cpp  IClass.cpp  IClassImpl.cpp  OuterClass.cpp
